<resources>

  <string name="app_name">Delightful Details</string>
  <string name="play">Play</string>
  <string name="spinner">Spinner</string>
  <string name="design">Design</string>
  <string name="points">Points</string>
  <string name="moving_points">Moving Points</string>
  <string name="globus">Globus</string>
  <string name="writer">Writer</string>
  <string name="pause">Pause</string>
  <string name="stop">Stop</string>
  <string name="on">On</string>
  <string name="off">Off</string>
  <string name="error">Error</string>
  <string name="trimclip">Trims, clips, &amp; fills</string>
  <string name="play_pause_stop">Play, pause, &amp; stop</string>
  <string name="fingerprint">Fingerprint</string>
  <string name="progressbar">Progress bars</string>
  <string name="handwriting">Handwriting</string>
  <string name="checkable">Checkable</string>
  <string name="curvedmotion">Curved motion</string>
  <string name="clock">Clocks</string>
  <string name="countdown">Countdown</string>
  <string name="pathmorph">Path morphing</string>
  <string name="music">Music</string>
  <string name="downloading">Downloading</string>
  <string name="balls">Balls</string>
  <string name="my">My</string>
  <string name="animals">Animals</string>
  <string name="hippo_text">Hippo</string>
  <string name="buffalo_text">Buffalo</string>
  <string name="elephant_text">Elephant</string>
  <string name="geometry_text">Geometry</string>

</resources>
