<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/design"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/design" />

        <TextView
            android:id="@+id/spinner"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spinner" />

        <TextView
            android:id="@+id/points"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/points" />

        <TextView
            android:id="@+id/balls"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balls" />

        <TextView
            android:id="@+id/writer"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/writer" />

        <TextView
            android:id="@+id/globus"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/globus" />

        <TextView
            android:id="@+id/my"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my" />

        <TextView
            android:id="@+id/animals"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animals" />

        <TextView
            android:id="@+id/clock"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clock" />

        <TextView
            android:id="@+id/checkable"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkable" />

        <TextView
            android:id="@+id/countdown"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/countdown" />

        <TextView
            android:id="@+id/curvedmotion"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/curvedmotion" />

        <TextView
            android:id="@+id/downloading"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/downloading" />

        <TextView
            android:id="@+id/fingerprint"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fingerprint" />

        <TextView
            android:id="@+id/handwriting"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/handwriting" />

        <TextView
            android:id="@+id/music"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/music" />

        <TextView
            android:id="@+id/pathmorph"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pathmorph" />

        <TextView
            android:id="@+id/playpausestop"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_pause_stop" />

        <TextView
            android:id="@+id/progressbar"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/progressbar" />

        <TextView
            android:id="@+id/trimclip"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trimclip" />

        <TextView
            android:id="@+id/geometryclip"
            style="@style/MainActivityListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geometry_text" />

    </LinearLayout>

</ScrollView>